Fri Jul 11 22:48:59 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix type of board in log_game_start

Fri Jul 11 11:23:02 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: move log_name out of globals

Mon Jul  7 22:42:20 CEST 2008 Petr Kadlec <mormegil@centrum.cz>

	* eval.c, gnubg.c, gtkgame.c, matchequity.c, render.c, renderprefs.c
	show.c, sound.c: minor fixes for MSVC compiler happinnes (mainly adding
	"float" suffix to decimal number literals etc.)

Mon Jul  7 12:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* rollout.c: Give each thread separate random number context to
	try and get results the same as single-threaded rollouts.

Mon Jul  7 00:22:35 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix multithreaded dice generation and logfiles

Mon Jul  7 00:20:52 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c: print prompt and answer for automatic questions

Sun Jul  6 00:00:22 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* format.c: correct minor error introduced by translational changes

Wed Jul  2 00:01:04 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, commands.inc, gnubg.c, gtkfile.c, gtkoptions.c,
	import.c, play.c, set.c, sgf.c, show.c: fix minor problems with the
	batch analyse function and add an option for setting default answers
	to yes/no questions.

Mon Jun 30 23:12:09 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* Makefile.am, analysis.c, backgammon.h, bearoff.c, configure.in,
	dbprovider.c, dice.c, drawboard.c, eval.c, export.c, external.c,
	file.c, format.c, formatgs.c, gnubg.c, gtkgame.c, gtkmovefilter.c,
	gtkoptions.c, util.c, pixmaps/Makefile.am, po/cs.po, po/da.po,
	po/de.po, po/en_US.po, po/fr.po, po/gnubg.pot, po/is.po, po/it.po,
	po/ja.po, po/ru.po, po/tr.po, po/gnubg-langs/__catstatus.php,
	mkinstalldirs, po/LINGUAS: fix minor translation problems and update
	the pot/po files to use glib macros
	* gnubgi18n.c, gnubgi18n.h: removed as similar functions are provided by