@@ -524,7 +524,6 @@ extern int BearoffEval(const bearoffcontext * pbc, const TanBoard anBoard, float
 extern void BearoffStatus(const bearoffcontext *pbc, char *sz)
 {
 	char buf[256];
-	char *title, *detail;
 
 	if (!pbc || (pbc->bt != BEAROFF_TWOSIDED && pbc->bt != BEAROFF_ONESIDED && pbc->bt != BEAROFF_HYPERGAMMON))
 		return;
@@ -533,27 +532,24 @@ extern void BearoffStatus(const bearoffcontext *pbc, char *sz)
 	if (pbc->bt == BEAROFF_HYPERGAMMON)
 	{
 		if (pbc->p)
-			title = _("In memory 2-sided exact %d-chequer Hypergammon database evaluator");
+			sprintf(buf, _("In memory 2-sided exact %d-chequer Hypergammon database evaluator"), pbc->nChequers);
 		else
-			title = _("On disk 2-sided exact %d-chequer Hypergammon database evaluator");
+			sprintf(buf, _("On disk 2-sided exact %d-chequer Hypergammon database evaluator"), pbc->nChequers);
 
-		sprintf(buf, title, pbc->nChequers);
 	}
 	else
 	{
 		if (pbc->p)
-			title = _("In memory %d-sided bearoff database evaluator");
+			sprintf(buf, _("In memory %d-sided bearoff database evaluator"), BEAROFF_ONESIDED ? 1 : 2);
 		else
-			title = _("On disk %d-sided bearoff database evaluator");
+			sprintf(buf, _("On disk %d-sided bearoff database evaluator"), BEAROFF_ONESIDED ? 1 : 2);
 
-		sprintf(buf, title, BEAROFF_ONESIDED ? 1 : 2);
 	}
 	sz += sprintf(sz, " * %s\n", buf);
 
 	sz += sprintf(sz, "   - %s\n", _("generated by GNU Backgammon"));
 
-	detail = _("up to %d chequers on %d points (%d positions) per player");
-	sprintf(buf, detail, pbc->nChequers, pbc->nPoints, Combination(pbc->nChequers + pbc->nPoints, pbc->nPoints));
+	sprintf(buf, _("up to %d chequers on %d points (%d positions) per player"), pbc->nChequers, pbc->nPoints, Combination(pbc->nChequers + pbc->nPoints, pbc->nPoints));
 	sz += sprintf(sz, "   - %s\n", buf);
 
 	switch (pbc->bt)
